# humux

./: .env.example  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  config.yml.example  docker-compose.yml  pa.md  pyproject.toml
humux/: Dockerfile  Makefile  character.md.example  config.yml.example  docker-compose.searxng.yml  docker-compose.yml  pa.md  pyproject.toml
humux/api/: admin.py
humux/channels/: telegram.py
humux/core/: agent.py  agents.py  artifacts.py  cli.py  coding.py  config.py  db.py  deep_research.py  embeddings.py  executor.py  github_digest.py  llm.py  log_streams.py  main.py  memory.py  metrics.py  models.py  permissions.py  prompt_builder.py  reply_decision.py  scheduler.py  skills.py  task_reflection.py  tools.py
humux/searxng/: settings.yml
humux/skills/: artifact-hosting.md  himalaya-email.md  image_generation.md  memory.md  scheduling.md  wacli-whatsapp.md
humux/tests/: conftest.py  test_admin_api.py  test_admin_ui.py  test_agent_llm_override.py  test_agent_tool_identity.py  test_agents.py  test_agents_admin.py  test_artifacts.py  test_browser_admin.py  test_browser_tool.py  test_chat_lock.py  test_chat_settings.py  test_coding.py  test_db.py  test_deep_research.py  test_embeddings_local.py  test_executor.py  test_forum_reply_context.py  test_github_app.py  test_github_webhook.py  test_group_chat.py  test_log_streams.py  test_memory_admin.py  test_memory_scope.py  test_memory_subtabs.py  test_memory_update_pipeline.py  test_metrics.py  test_multi_message.py  test_per_chat_agent.py  test_permissions.py  test_reactions.py  test_reply_decision.py  test_scheduler.py  (+9 more)
(+167 files in other folders)
