[project]
name = "humux"
version = "0.29.0"
description = "Personal AI agent — unified interface across messaging, email, and calendars"
requires-python = ">=3.14"
dependencies = [
    "anthropic",
    "openai",
    "python-telegram-bot",
    "pydantic-settings",
    "pyyaml",
    "aiosqlite",
    "fastapi",
    "uvicorn[standard]",
    "edge-tts",
    "caldav",
    "python-dotenv",
    "apscheduler>=3.10,<4",
    "sqlalchemy",
    "tavily-python",
    "httpx",
    "jinja2",
    "python-multipart>=0.0.22",
    "vobject>=0.9.9",
    "numpy",
    "playwright",
    "cryptography",
]

[project.optional-dependencies]
# Offline on-device TTS (issue #84). Optional: pulls onnxruntime (~200MB), only
# needed when voice.backend = "kokoro". Install with `uv sync --extra kokoro`.
kokoro = ["kokoro-onnx>=0.4"]
# Local on-device embeddings (semantic memory, Tier 2). Pulls onnxruntime (~200MB)
# + intfloat/multilingual-e5-small model (~470MB). Use a sidecar instead for a leaner
# image — see docker-compose.yml embeddings service.
fastembed = ["fastembed"]
# Local on-device STT. Pulls faster-whisper + ctranslate2 (~350MB).
# Use a sidecar instead for a leaner image — see docker-compose.yml whisper service.
whisper = ["faster-whisper"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-xdist",
    "ruff",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
